--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,119 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.card {
+  background-image: url(./space.jpg);
   color: white;
+  width: 450px;
+  height: 315px;
+  border-radius: 8px;
+  margin-left: 100px;
+  position: relative;
+  font-weight: bold;
+  font-size: 18px;
 }
 
-.App-link {
-  color: #61dafb;
+p {
+  display: flex;
+  justify-content: center;
+  color: gold;
+  font-size: 30px;
+  background-color: rgba(37, 93, 97, 0.3);
+  position: absolute;
+ top : 155px ;
+  left: 20px;
+  font-family: "Century Gothic, CenturyGothic, AppleGothic, sans-serif";
+  width: 330px;
+  height: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.master {
+  width: 77px;
+  height: 93px;
+  position: absolute;
+  right: 20px;
+  bottom: 25px;
+}
+
+.div3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+}
+
+.div2 {
+  display: flex;
+  padding-left: 40px;
+  align-items: center;
+  width: 100%;
+  position: absolute;
+  bottom: 50px;
+}
+
+#date {
+  font-weight: normal;
+  font-size: 8px;
+  position: absolute;
+  right: 130px;
+  bottom: 80px;
+}
+
+#valid {
+  padding-left: 150px;
+  padding-right: 8px;
+  font-size: 10px;
+  font-weight: normal;
+  width: 30px;
+}
+
+.chip {
+  width: 94px;
+  height: 70px ;
+  margin-left: 45px;
+}
+
+#holder {
+  position: absolute;
+  bottom: 25px;
+  left: 40px;
+}
+.formulaire {
+  position: absolute ;
+  margin-left: 500px ;
+  top: 15px;
+  color:black ;
+  border: 2px solid black;
+  height: 300px;
+
+}
+input {
+  display: flex ;
+  margin-left: 10px ;
+  height: 32px ;
+  width: 400px;
+  border-radius: 8px;
+  margin-top: 30px;
+  font-weight: 500 ;
+  font-size: 20px;
+}
+.div {
+  padding: 10px ;
+}
+.date {
+  display: flex ;
+
+}
+.my{
+  height: 32px ;
+  width: 100px;
+}
+label {
+  position:absolute;
+  left: 20px ;
+  font-weight: 500 ;
+  font-size: 20px;
+}
+h1{
+  display: flex  ;
+  justify-content: flex-end ; 
+  margin-right: 20px ;
+  padding-top: 20px;
 }
